Appnexus refactoring